동적파일 적용 디버깅

--- a/스프린트미션_작업중/미션5_4팀_김명환.md
+++ b/스프린트미션_작업중/미션5_4팀_김명환.md
@@ -1,3 +1,13 @@
+---
+layout: default
+title: "스프린트미션5 4팀_김명환 - 문서 노이즈 제거 딥러닝 모델 개발 보고서"
+description: "문서 이미지에서 노이즈를 제거하는 오토인코더 모델 개발"
+date: 2025-08-10
+cache-control: no-cache
+expires: 0
+pragma: no-cache
+---
+
 # 스프린트미션5 4팀_김명환 - 문서 노이즈 제거 딥러닝 모델 개발 보고서
 
 ## 📋 목차
