--- a/스프린트미션_작업중/미션5_4팀_김명환.md
+++ b/스프린트미션_작업중/미션5_4팀_김명환.md
@@ -235,6 +235,23 @@ loss = 0.6 * L1_loss + 0.25 * SSIM_loss + 0.15 * Perceptual_loss
 - ![시험](https://c0z0c.github.io/sprint_mission/%EC%8A%A4%ED%94%84%EB%A6%B0%ED%8A%B8%EB%AF%B8%EC%85%98_%EC%99%84%EB%A3%8C/image/%EB%AF%B8%EC%85%985_4%ED%8C%80_%EA%B9%80%EB%AA%85%ED%99%98/DenoisingUNet_pro_20250809_175329_test.png)
 
 ### 6.2 주요 발견사항
+- ![이미지](https://c0z0c.github.io/sprint_mission/%EC%8A%A4%ED%94%84%EB%A6%B0%ED%8A%B8%EB%AF%B8%EC%85%98_%EC%99%84%EB%A3%8C/image/%EB%AF%B8%EC%85%985_4%ED%8C%80_%EA%B9%80%EB%AA%85%ED%99%98/hist01.png)
+- 이미시 히스토 그램을 살펴 보면 0와 255로 쌍봉을 이루고 있다.
+- 해당 상황에 알맞는 손실함수를 적용하여 성능을 향상 시켰다.
+
+6.2.1. SSIM Loss
+SSIM 값을 손실로 변환:
+- $\mathcal{L}{SSIM} = 1 - \text{SSIM}(y{pred}, y_{true})$
+SSIM 계산 공식:
+- $\text{SSIM}(x,y) = \frac{(2\mu_x \mu_y + C_1)(2\sigma_{xy} + C_2)}{(\mu_x^2 + \mu_y^2 + C_1)(\sigma_x^2 + \sigma_y^2 + C_2)}$
+
+- $\mu_x, \mu_y$: 각각 $x, y$의 평균
+- $\sigma_x^2, \sigma_y^2$: 각각 $x, y$의 분산
+- $\sigma_{xy}$: $x$와 $y$의 공분산
+- $C_1 = (k_1 \cdot L)^2$, $C_2 = (k_2 \cdot L)^2$ (안정성 상수)
+- $L$: 픽셀 값의 동적 범위 (보통 255)
+- $k_1 = 0.01$, $k_2 = 0.03$ (기본값)
+- 
 
 #### 6.2.1 모델 아키텍처 분석
 1. **U-Net > Autoencoder**: Skip connection의 중요성
@@ -293,37 +310,6 @@ AttentionResUNet:    33.83 dB (최고 복잡도, 제한적 개선)
 - **Progressive Training**: 128→256→512 단계적 학습
 - **Early Stopping**: patience=10으로 과적합 방지
 - **Gradient Clipping**: max_norm=1.0으로 학습 안정성 확보
-
-### 7.4 향후 개선 방향
-
-#### 7.4.1 단기 개선안 (3-6개월)
-1. **Vision Transformer (ViT)** 기반 디노이징 모델 실험
-2. **Diffusion Model** 적용을 통한 고품질 복원
-3. **Few-shot Learning** 기법으로 적은 데이터로 특화 모델 구축
-4. **Multi-scale Loss** 도입으로 다양한 해상도 최적화
-
-#### 7.4.2 중장기 개선안 (6-12개월)
-1. **Self-supervised Pre-training**: 대규모 문서 데이터 활용
-2. **Domain Adaptation**: 특정 문서 유형(손글씨, 인쇄물) 특화
-3. **Real-time Inference**: TensorRT, ONNX 최적화
-4. **Edge Computing**: 모바일/임베디드 환경 배포
-
-### 7.5 실용적 응용 분야
-
-#### 7.5.1 문서 디지털화
-- **역사적 문서 보존**: 박물관, 도서관 아카이브
-- **법적 문서 관리**: 계약서, 증명서 품질 개선
-- **의료 기록**: 수기 차트, 오래된 X-ray 이미지
-
-#### 7.5.2 OCR 전처리
-- **텍스트 인식 정확도 향상**: 95% → 98%+ 목표
-- **다국어 문서 처리**: 한글, 영어, 중국어 등
-- **표 구조 인식**: 복잡한 양식 문서 처리
-
-#### 7.5.3 상업적 활용
-- **스캔 앱 통합**: 모바일 문서 스캐너
-- **프린터 소프트웨어**: 복사 품질 자동 향상
-- **클라우드 서비스**: 대용량 문서 일괄 처리
 
 ---
 
