랜더링 수정

--- a/스터디/이미지와_컴퓨터미전_학습자료.md
+++ b/스터디/이미지와_컴퓨터미전_학습자료.md
@@ -10,6 +10,7 @@ author: "코드잇 AI엔지니어 4기 김명환"
 ---
 
 # 이미지와 컴퓨터비전 학습자료
+
 > **작성자**: 코드잇 AI엔지니어 4기 김명환  
 > **최종 수정**: 2025년 8월 14일
 
@@ -19,14 +20,16 @@ author: "코드잇 AI엔지니어 4기 김명환"
 3. [전통적인 컴퓨터 비전 방법](#전통적인-컴퓨터-비전-방법)
 4. [딥러닝과 CNN](#딥러닝과-cnn)
 5. [CNN 구성 요소](#cnn-구성-요소)
-6. [이미지 전처리 방법과 종류](#이미지-전처리-방법과-종류)
-7. [이미지 증강(Data Augmentation)](#이미지-증강data-augmentation)
-8. [정규화의 장단점과 실제 적용](#정규화의-장단점과-실제-적용)
-9. [주요 컴퓨터 비전 태스크](#주요-컴퓨터-비전-태스크)
-10. [유명한 CNN 아키텍처](#유명한-cnn-아키텍처)
-11. [실용 응용 분야](#실용-응용-분야)
-12. [용어 정리](#용어-정리)
-13. [부록: 상세 구현 코드](#부록-상세-구현-코드)
+6. [CNN 아키텍처 시각화](#cnn-아키텍처-시각화)
+7. [이미지 처리 파이프라인](#이미지-처리-파이프라인)
+8. [이미지 전처리 방법과 종류](#이미지-전처리-방법과-종류)
+9. [이미지 증강(Data Augmentation)](#이미지-증강data-augmentation)
+10. [정규화의 장단점과 실제 적용](#정규화의-장단점과-실제-적용)
+11. [주요 컴퓨터 비전 태스크](#주요-컴퓨터-비전-태스크)
+12. [유명한 CNN 아키텍처](#유명한-cnn-아키텍처)
+13. [실용 응용 분야](#실용-응용-분야)
+14. [용어 정리](#용어-정리)
+15. [부록: 상세 구현 코드](#부록-상세-구현-코드)
 
 ---
 
@@ -694,7 +697,6 @@ ResNet: H(x) = F(x) + x  ← 스킵 연결 추가
 
 ---
 
-
 ## 용어 정리
 
 ### A-C
@@ -812,7 +814,6 @@ ResNet: H(x) = F(x) + x  ← 스킵 연결 추가
 
 ---
 ---
-
 ---
 
 ## 부록: 상세 구현 코드
@@ -1751,39 +1752,39 @@ graph TD
 ```mermaid
 flowchart TD
     subgraph "1. 데이터 수집"
-        A1[원시 이미지 데이터] --> A2[데이터 라벨링]
-        A2 --> A3[데이터셋 분할<br/>Train/Validation/Test]
+        A1["원시 이미지 데이터"] --> A2["데이터 라벨링"]
+        A2 --> A3["데이터셋 분할<br/>Train/Validation/Test"]
     end
     
     subgraph "2. 전처리 단계"
-        B1[크기 조정<br/>Resize/Crop] --> B2[색공간 변환<br/>RGB/HSV/Grayscale]
-        B2 --> B3[정규화<br/>0-1 or -1~1 범위]
-        B3 --> B4[노이즈 제거<br/>필터링]
+        B1["크기 조정<br/>Resize/Crop"] --> B2["색공간 변환<br/>RGB/HSV/Grayscale"]
+        B2 --> B3["정규화<br/>0-1 or -1~1 범위"]
+        B3 --> B4["노이즈 제거<br/>필터링"]
     end
     
     subgraph "3. 데이터 증강"
-        C1[기하학적 변환<br/>회전/이동/크기조정] --> C2[색상 변환<br/>밝기/대비/채도]
-        C2 --> C3[노이즈 추가<br/>Gaussian/Salt&Pepper]
-        C3 --> C4[고급 증강<br/>Mixup/CutMix]
+        C1["기하학적 변환<br/>회전/이동/크기조정"] --> C2["색상 변환<br/>밝기/대비/채도"]
+        C2 --> C3["노이즈 추가<br/>Gaussian/Salt&Pepper"]
+        C3 --> C4["고급 증강<br/>Mixup/CutMix"]
     end
     
     subgraph "4. 모델 학습"
-        D1[CNN 아키텍처<br/>선택/설계] --> D2[손실함수 정의<br/>CrossEntropy/MSE]
-        D2 --> D3[옵티마이저 설정<br/>Adam/SGD]
-        D3 --> D4[학습률 스케줄링]
-        D4 --> D5[배치 단위 학습]
+        D1["CNN 아키텍처<br/>선택/설계"] --> D2["손실함수 정의<br/>CrossEntropy/MSE"]
+        D2 --> D3["옵티마이저 설정<br/>Adam/SGD"]
+        D3 --> D4["학습률 스케줄링"]
+        D4 --> D5["배치 단위 학습"]
     end
     
     subgraph "5. 평가 및 최적화"
-        E1[검증 성능 측정<br/>Accuracy/F1-Score] --> E2[하이퍼파라미터<br/>튜닝]
-        E2 --> E3[모델 앙상블<br/>여러 모델 조합]
-        E3 --> E4[최종 모델 선택]
+        E1["검증 성능 측정<br/>Accuracy/F1-Score"] --> E2["하이퍼파라미터<br/>튜닝"]
+        E2 --> E3["모델 앙상블<br/>여러 모델 조합"]
+        E3 --> E4["최종 모델 선택"]
     end
     
     subgraph "6. 배포 및 추론"
-        F1[모델 압축<br/>Quantization/Pruning] --> F2[추론 최적화<br/>TensorRT/ONNX]
-        F2 --> F3[실시간 처리<br/>스트리밍/배치]
-        F3 --> F4[성능 모니터링<br/>정확도/속도 추적]
+        F1["모델 압축<br/>Quantization/Pruning"] --> F2["추론 최적화<br/>TensorRT/ONNX"]
+        F2 --> F3["실시간 처리<br/>스트리밍/배치"]
+        F3 --> F4["성능 모니터링<br/>정확도/속도 추적"]
     end
     
     A3 --> B1
