--- a/스터디/이미지와_컴퓨터미전_학습자료.md
+++ b/스터디/이미지와_컴퓨터미전_학습자료.md
@@ -814,7 +814,6 @@ ResNet: H(x) = F(x) + x  ← 스킵 연결 추가
 
 ---
 ---
----
 
 ## 부록: 상세 구현 코드
 
@@ -1676,10 +1675,6 @@ graph TD
     P --> Q[FC Layer 2<br/>256개 뉴런]
     Q --> R[ReLU + Dropout]
     R --> S[출력 레이어<br/>클래스 수]
-    
-    style A fill:#e1f5fe
-    style S fill:#f3e5f5
-    style N fill:#fff3e0
 ```
 
 ### 컨볼루션 연산 상세 과정
@@ -1705,9 +1700,7 @@ graph LR
     C --> E
     D --> E
     
-    F["출력 크기 계산:<br/>H' = H + 2P - K / S + 1<br/>W' = W + 2P - K / S + 1"]
-    
-    style F fill:#fff59d
+    F["출력 크기 계산:<br/>H' = H + 2P - K / S + 1<br/>W' = W + 2P - K / S + 1"]   
 ```
 
 ### 주요 CNN 아키텍처 비교
@@ -1734,13 +1727,6 @@ graph TD
         R8 --> R9[ReLU]
         R9 --> R10[Output]
     end
-    
-    style L1 fill:#e8f5e8
-    style A1 fill:#e8f5e8
-    style R1 fill:#e8f5e8
-    style L8 fill:#f5e8e8
-    style A12 fill:#f5e8e8
-    style R10 fill:#f5e8e8
 ```
 
 ---
@@ -1751,37 +1737,37 @@ graph TD
 
 ```mermaid
 flowchart TD
-    subgraph "1. 데이터 수집"
+    subgraph DataCollection ["1. 데이터 수집"]
         A1["원시 이미지 데이터"] --> A2["데이터 라벨링"]
         A2 --> A3["데이터셋 분할<br/>Train/Validation/Test"]
     end
     
-    subgraph "2. 전처리 단계"
+    subgraph Preprocessing ["2. 전처리 단계"]
         B1["크기 조정<br/>Resize/Crop"] --> B2["색공간 변환<br/>RGB/HSV/Grayscale"]
         B2 --> B3["정규화<br/>0-1 or -1~1 범위"]
         B3 --> B4["노이즈 제거<br/>필터링"]
     end
     
-    subgraph "3. 데이터 증강"
+    subgraph DataAug ["3. 데이터 증강"]
         C1["기하학적 변환<br/>회전/이동/크기조정"] --> C2["색상 변환<br/>밝기/대비/채도"]
         C2 --> C3["노이즈 추가<br/>Gaussian/Salt&Pepper"]
         C3 --> C4["고급 증강<br/>Mixup/CutMix"]
     end
     
-    subgraph "4. 모델 학습"
+    subgraph Training ["4. 모델 학습"]
         D1["CNN 아키텍처<br/>선택/설계"] --> D2["손실함수 정의<br/>CrossEntropy/MSE"]
         D2 --> D3["옵티마이저 설정<br/>Adam/SGD"]
         D3 --> D4["학습률 스케줄링"]
         D4 --> D5["배치 단위 학습"]
     end
     
-    subgraph "5. 평가 및 최적화"
+    subgraph Evaluation ["5. 평가 및 최적화"]
         E1["검증 성능 측정<br/>Accuracy/F1-Score"] --> E2["하이퍼파라미터<br/>튜닝"]
         E2 --> E3["모델 앙상블<br/>여러 모델 조합"]
         E3 --> E4["최종 모델 선택"]
     end
     
-    subgraph "6. 배포 및 추론"
+    subgraph Deployment ["6. 배포 및 추론"]
         F1["모델 압축<br/>Quantization/Pruning"] --> F2["추론 최적화<br/>TensorRT/ONNX"]
         F2 --> F3["실시간 처리<br/>스트리밍/배치"]
         F3 --> F4["성능 모니터링<br/>정확도/속도 추적"]
@@ -1792,9 +1778,6 @@ flowchart TD
     C4 --> D1
     D5 --> E1
     E4 --> F1
-    
-    style A1 fill:#e3f2fd
-    style F4 fill:#f3e5f5
 ```
 
 ### 이미지 전처리 세부 과정
@@ -1832,11 +1815,6 @@ flowchart LR
     E2 --> F
     E3 --> F
     E4 --> F
-    
-    style A fill:#fff3e0
-    style F fill:#e8f5e8
-    style B fill:#ffecb3
-    style E fill:#ffecb3
 ```
 
 ### 데이터 증강 전략 플로우
@@ -1884,9 +1862,6 @@ graph TD
     D4 --> G
     E4 --> G
     F4 --> G
-    
-    style A fill:#e1f5fe
-    style G fill:#e8f5e8
 ```
 
 ### 모델 학습 과정 상세화
