마크다운수정

--- a/스터디/이미지와_컴퓨터비전_학습자료.md
+++ b/스터디/이미지와_컴퓨터비전_학습자료.md
@@ -1653,28 +1653,28 @@ def run_realtime_demo():
 
 ```mermaid
 graph TD
-    A[입력 이미지<br/>224×224×3] --> B[Conv Layer 1<br/>3×3 필터, 32개<br/>224×224×32]
+    A[입력 이미지\n224×224×3] --> B[Conv Layer 1\n3×3 필터, 32개\n224×224×32]
     B --> C[ReLU 활성화]
-    C --> D[MaxPool 2×2<br/>112×112×32]
+    C --> D[MaxPool 2×2\n112×112×32]
     
-    D --> E[Conv Layer 2<br/>3×3 필터, 64개<br/>112×112×64]
+    D --> E[Conv Layer 2\n3×3 필터, 64개\n112×112×64]
     E --> F[ReLU 활성화]
-    F --> G[MaxPool 2×2<br/>56×56×64]
+    F --> G[MaxPool 2×2\n56×56×64]
     
-    G --> H[Conv Layer 3<br/>3×3 필터, 128개<br/>56×56×128]
+    G --> H[Conv Layer 3\n3×3 필터, 128개\n56×56×128]
     H --> I[ReLU 활성화]
-    I --> J[MaxPool 2×2<br/>28×28×128]
+    I --> J[MaxPool 2×2\n28×28×128]
     
-    J --> K[Conv Layer 4<br/>3×3 필터, 256개<br/>28×28×256]
+    J --> K[Conv Layer 4\n3×3 필터, 256개\n28×28×256]
     K --> L[ReLU 활성화]
-    L --> M[MaxPool 2×2<br/>14×14×256]
+    L --> M[MaxPool 2×2\n14×14×256]
     
-    M --> N[Flatten<br/>50,176개 뉴런]
-    N --> O[FC Layer 1<br/>512개 뉴런]
+    M --> N[Flatten\n50,176개 뉴런]
+    N --> O[FC Layer 1\n512개 뉴런]
     O --> P[ReLU + Dropout]
-    P --> Q[FC Layer 2<br/>256개 뉴런]
+    P --> Q[FC Layer 2\n256개 뉴런]
     Q --> R[ReLU + Dropout]
-    R --> S[출력 레이어<br/>클래스 수]
+    R --> S[출력 레이어\n클래스 수]
 ```
 
 ### 컨볼루션 연산 상세 과정
@@ -1682,17 +1682,17 @@ graph TD
 ```mermaid
 graph LR
     subgraph "입력"
-        A["이미지<br/>H×W×C"]
+        A["이미지\nH×W×C"]
     end
     
     subgraph "컨볼루션 연산"
-        B["필터<br/>K×K×C×N"]
-        C["스트라이드<br/>S"]
-        D["패딩<br/>P"]
+        B["필터\nK×K×C×N"]
+        C["스트라이드\nS"]
+        D["패딩\nP"]
     end
     
     subgraph "출력"
-        E["피처맵<br/>H'×W'×N"]
+        E["피처맵\nH'×W'×N"]
     end
     
     A --> B
@@ -1700,8 +1700,9 @@ graph LR
     C --> E
     D --> E
     
-    F["출력 크기 계산:<br/>H' = H + 2P - K / S + 1<br/>W' = W + 2P - K / S + 1"]   
+    F["출력 크기 계산:\nH' = H + 2P - K / S + 1\nW' = W + 2P - K / S + 1"]   
 ```
+
 
 ### 주요 CNN 아키텍처 비교
 
@@ -1737,40 +1738,40 @@ graph TD
 
 ```mermaid
 flowchart TD
-    subgraph DataCollection ["1. 데이터 수집"]
+    subgraph DataCollection ["데이터 수집"]
         A1["원시 이미지 데이터"] --> A2["데이터 라벨링"]
-        A2 --> A3["데이터셋 분할<br/>Train/Validation/Test"]
+        A2 --> A3["데이터셋 분할\nTrain/Validation/Test"]
     end
     
-    subgraph Preprocessing ["2. 전처리 단계"]
-        B1["크기 조정<br/>Resize/Crop"] --> B2["색공간 변환<br/>RGB/HSV/Grayscale"]
-        B2 --> B3["정규화<br/>0-1 or -1~1 범위"]
-        B3 --> B4["노이즈 제거<br/>필터링"]
+    subgraph Preprocessing ["전처리 단계"]
+        B1["크기 조정\nResize/Crop"] --> B2["색공간 변환\nRGB/HSV/Grayscale"]
+        B2 --> B3["정규화\n0-1 or -1~1 범위"]
+        B3 --> B4["노이즈 제거\n필터링"]
     end
     
-    subgraph DataAug ["3. 데이터 증강"]
-        C1["기하학적 변환<br/>회전/이동/크기조정"] --> C2["색상 변환<br/>밝기/대비/채도"]
-        C2 --> C3["노이즈 추가<br/>Gaussian/Salt&Pepper"]
-        C3 --> C4["고급 증강<br/>Mixup/CutMix"]
+    subgraph DataAug ["데이터 증강"]
+        C1["기하학적 변환\n회전/이동/크기조정"] --> C2["색상 변환\n밝기/대비/채도"]
+        C2 --> C3["노이즈 추가\nGaussian/Salt&Pepper"]
+        C3 --> C4["고급 증강\nMixup/CutMix"]
     end
     
-    subgraph Training ["4. 모델 학습"]
-        D1["CNN 아키텍처<br/>선택/설계"] --> D2["손실함수 정의<br/>CrossEntropy/MSE"]
-        D2 --> D3["옵티마이저 설정<br/>Adam/SGD"]
+    subgraph Training ["모델 학습"]
+        D1["CNN 아키텍처\n선택/설계"] --> D2["손실함수 정의\nCrossEntropy/MSE"]
+        D2 --> D3["옵티마이저 설정\nAdam/SGD"]
         D3 --> D4["학습률 스케줄링"]
         D4 --> D5["배치 단위 학습"]
     end
     
-    subgraph Evaluation ["5. 평가 및 최적화"]
-        E1["검증 성능 측정<br/>Accuracy/F1-Score"] --> E2["하이퍼파라미터<br/>튜닝"]
-        E2 --> E3["모델 앙상블<br/>여러 모델 조합"]
+    subgraph Evaluation ["평가 및 최적화"]
+        E1["검증 성능 측정\nAccuracy/F1-Score"] --> E2["하이퍼파라미터\n튜닝"]
+        E2 --> E3["모델 앙상블\n여러 모델 조합"]
         E3 --> E4["최종 모델 선택"]
     end
     
-    subgraph Deployment ["6. 배포 및 추론"]
-        F1["모델 압축<br/>Quantization/Pruning"] --> F2["추론 최적화<br/>TensorRT/ONNX"]
-        F2 --> F3["실시간 처리<br/>스트리밍/배치"]
-        F3 --> F4["성능 모니터링<br/>정확도/속도 추적"]
+    subgraph Deployment ["배포 및 추론"]
+        F1["모델 압축\nQuantization/Pruning"] --> F2["추론 최적화\nTensorRT/ONNX"]
+        F2 --> F3["실시간 처리\n스트리밍/배치"]
+        F3 --> F4["성능 모니터링\n정확도/속도 추적"]
     end
     
     A3 --> B1
@@ -1785,22 +1786,22 @@ flowchart TD
 ```mermaid
 flowchart LR
     subgraph "입력 이미지 분석"
-        A[원본 이미지<br/>다양한 크기/형식] --> B{이미지 품질<br/>검사}
+        A[원본 이미지\n다양한 크기/형식] --> B{이미지 품질\n검사}
         B -->|양호| C[기본 전처리]
         B -->|불량| D[품질 개선 필요]
     end
     
     subgraph "품질 개선"
-        D --> D1[노이즈 제거<br/>Bilateral Filter]
-        D1 --> D2[선명도 향상<br/>Unsharp Masking]
-        D2 --> D3[대비 개선<br/>CLAHE]
+        D --> D1[노이즈 제거\nBilateral Filter]
+        D1 --> D2[선명도 향상\nUnsharp Masking]
+        D2 --> D3[대비 개선\nCLAHE]
         D3 --> C
     end
     
     subgraph "기본 전처리"
-        C --> C1[크기 정규화<br/>224×224]
-        C1 --> C2[색상 정규화<br/>RGB 0-1 범위]
-        C2 --> C3[통계적 정규화<br/>평균/표준편차]
+        C --> C1[크기 정규화\n224×224]
+        C1 --> C2[색상 정규화\nRGB 0-1 범위]
+        C2 --> C3[통계적 정규화\n평균/표준편차]
     end
     
     subgraph "선택적 처리"
@@ -1877,17 +1878,17 @@ sequenceDiagram
     Note over D,S: 한 에포크 학습 과정
     
     D->>M: 배치 데이터 입력
-    Note right of D: 전처리된 이미지<br/>+ 라벨
+    Note right of D: 전처리된 이미지\n+ 라벨
     
     M->>M: 순전파 (Forward Pass)
-    Note right of M: Conv → ReLU → Pool<br/>반복 후 분류
+    Note right of M: Conv → ReLU → Pool\n반복 후 분류
     
     M->>L: 예측값 전달
     L->>L: 손실 계산
-    Note right of L: CrossEntropy Loss<br/>= -log(P(정답클래스))
+    Note right of L: CrossEntropy Loss\n= -log(P(정답클래스))
     
     L->>M: 손실값 역전파
-    Note right of L: 그라디언트 계산<br/>∂Loss/∂W
+    Note right of L: 그라디언트 계산\n∂Loss/∂W
     
     M->>O: 그라디언트 전달
     O->>O: 파라미터 업데이트
@@ -1895,12 +1896,12 @@ sequenceDiagram
     
     O->>S: 스텝 완료 알림
     S->>S: 학습률 조정
-    Note right of S: 코사인/지수 감소<br/>또는 플래토 기반
+    Note right of S: 코사인/지수 감소\n또는 플래토 기반
     
     alt 검증 단계
         D->>M: 검증 데이터
         M->>M: 추론 모드
-        Note right of M: Dropout 비활성화<br/>BatchNorm 고정
+        Note right of M: Dropout 비활성화\nBatchNorm 고정
         M->>L: 검증 손실 계산
     end
 ```
