이미지와컴퓨터비전

--- a/스터디/이미지와_컴퓨터비전.md
+++ b/스터디/이미지와_컴퓨터비전.md
@@ -1,17 +1,17 @@
 ---
 layout: default
-title: "이미지와 컴퓨터비전 학습자료"
-description: "이미지와 컴퓨터비전 학습자료"
+title: "이미지와 컴퓨터비전"
+description: "이미지와 컴퓨터비전"
 date: 2025-08-14
 cache-control: no-cache
 expires: 0
 pragma: no-cache
-author: "코드잇 AI엔지니어 4기 김명환"
+author: "김명환"
 ---
 
-# 이미지와 컴퓨터비전 학습자료
+# 이미지와 컴퓨터비전
 
-> **작성자**: 코드잇 AI엔지니어 4기 김명환  
+> **작성자**: 김명환  
 > **최종 수정**: 2025년 8월 14일
 
 ## 목차
