마크다운 문서 github pages 특성 추가

--- a/위클리페이퍼/위클리_페이퍼_5_AI4기_김명환.md
+++ b/위클리페이퍼/위클리_페이퍼_5_AI4기_김명환.md
@@ -1,3 +1,13 @@
+---
+layout: default
+title: "위클리페이퍼5 4팀_김명환 - PyTorch와 TensorFlow"
+description: "PyTorch와 TensorFlow"
+date: 2025-07-31
+cache-control: no-cache
+expires: 0
+pragma: no-cache
+---
+
 # 위클리페이퍼 #5: PyTorch와 TensorFlow
 
 ---
@@ -9,7 +19,7 @@
 | **작성자** | 김명환 |
 | **작성일** | 2025년 7월 31일 |
 | **과정** | AI엔지니어 딥러닝 과정 |
-| **주제** | 머신러닝과 딥러닝의 차이점 및 하이퍼파라미터 최적화 |
+| **주제** | PyTorch와 TensorFlow |
 ---
 
 # PyTorch vs TensorFlow
