--- a/위클리페이퍼/위클리_페이퍼_4_AI4기_김명환.md
+++ b/위클리페이퍼/위클리_페이퍼_4_AI4기_김명환.md
@@ -1,3 +1,13 @@
+---
+layout: default
+title: "위클리페이퍼4 4팀_김명환 - 머신러닝 vs 딥러닝 그리고 하이퍼파라미터"
+description: "머신러닝 vs 딥러닝 그리고 하이퍼파라미터"
+date: 2025-07-31
+cache-control: no-cache
+expires: 0
+pragma: no-cache
+---
+
 # 위클리페이퍼 #4: 머신러닝 vs 딥러닝 그리고 하이퍼파라미터
 
 ---
